--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = heltecwifikit32
+
 [env]
 framework = espidf
 monitor_speed = 115200
-monitor_raw = no
 upload_port = /dev/cu.SLAB_USBtoUART
 board_build.partitions = larger.csv
-board_build.embed_files =
+board_build.embed_files = 
 	src/pages/favicon.ico
-board_build.embed_txtfiles =
+board_build.embed_txtfiles = 
 	src/pages/styles-67aa3b0203355627b525be2ea57be7bf.css
 	src/pages/config.html
 	src/pages/result.html
@@ -33,12 +35,12 @@ board_build.embed_txtfiles =
 	src/pages/portmap_start.html
 	src/pages/portmap_end.html
 	src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
-platform = espressif32
+platform = espressif32@6.5.0
 
 [env:heltecwifikit32]
 board = heltec_wifi_kit_32
 upload_port = /dev/cu.SLAB_USBtoUART
-lib_deps =
+lib_deps = 
 	stm32duino/STM32duino LwIP@^2.1.3
 	moononournation/GFX Library for Arduino@^1.4.9
 	durydevelop/OLED SSD1306 - SH1106@^1.0.7
@@ -49,15 +51,13 @@ lib_deps =
 [env:esp32]
 board = esp32dev
 upload_port = /dev/cu.SLAB_USBtoUART
-lib_deps =
+lib_deps = stm32duino/STM32duino LwIP@^2.1.3
 
 [env:esp32-c3]
 board = esp32-c3-devkitm-1
-lib_deps =
-	stm32duino/STM32duino LwIP@^2.1.3
+lib_deps = stm32duino/STM32duino LwIP@^2.1.3
 
 [env:esp32-s2]
 board = lolin_s2_mini
 upload_port = /dev/ttyACM0
-lib_deps =
-	stm32duino/STM32duino LwIP@^2.1.3
+lib_deps = stm32duino/STM32duino LwIP@^2.1.3
